# AgentWorkBench

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: server.py
baseline/: baseline_agent.py
env/: environment.py  grader.py  models.py  reward.py  score_utils.py  tasks.py
server/: app.py
