[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentworkbench"
version = "1.0.1"
description = "AgentWorkBench AI Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "python-dotenv"
]

[project.scripts]

server = "server.app:main"
